src/objects/PPC_Leads__c.object
<CustomObject>
    <fields>
        <fullName>Clicks__c</fullName>
        <label>Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <label>Conversion Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Facebook_Spend__c</fullName>
        <label>Facebook Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SEM_AdWords_Leads__c</fullName>
        <label>SEM AdWords Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SEM_PPC__c</fullName>
        <label>SEM PPC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SEO_AdWords_Leads__c</fullName>
        <label>SEO AdWords Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SEO_PPC__c</fullName>
        <label>SEO PPC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sale_Rate__c</fullName>
        <label>Sale Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <label>Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spam__c</fullName>
        <label>Spam</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Ad_Spend__c</fullName>
        <label>Total Ad Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Leads__c</fullName>
        <label>Total Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <label>Week</label>
        <type>Date</type>
    </fields>
    <label>PPC &amp; Lead</label>
    <nameField>
        <label>PPC &amp; Leads Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PPC &amp; Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>